--- a/src/Components/RowPost/RowPost.css
+++ b/src/Components/RowPost/RowPost.css
@@ -7,9 +7,25 @@
     padding: 20px;
     overflow-y: hidden;
     overflow-x: scroll;
+    
+}
+.posters::-webkit-scrollbar{
+    display: none;
 }
 
 .poster{
+    max-width: 500px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.smallPoster{
     max-width: 250px;
     margin-right: 10px;
+    cursor: pointer;
+}
+.poster:hover{
+    transform: scale(1.1);
+}
+.smallPoster:hover{
+    transform: scale(1.1);
 }
